--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sanity/client": "^6.1.7",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.14.4",
+    "bootstrap": "^5.3.0",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "flutterwave-react-v3": "^1.3.0",
     "next": "13.4.12",
+    "next-sanity-image": "^6.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.2.0",
+    "remixicon": "^3.4.0",
+    "sanity": "^3.14.4",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "5.2"
   }
 }
