Successfully handled sanity

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^1.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@sanity/client": "^6.1.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.4",
+    "@sendinblue/client": "^3.3.1",
     "bootstrap": "^5.3.0",
     "canvas-confetti": "^1.6.0",
     "eslint": "8.45.0",
@@ -32,6 +34,7 @@
     "reactstrap": "^9.2.0",
     "remixicon": "^3.4.0",
     "sanity": "^3.14.4",
+    "sib-api-v3-sdk": "^8.5.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "5.2"
   }
